--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -2,10 +2,10 @@
 <configuration>
   
   <configSections>
-    <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 -->
+    
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
-    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net"/>
-  </configSections>
+    <section name="log4net" type="log4net.Config.Log4NetConfigurationSectionHandler,Log4net" />
+  <!-- For more information on Entity Framework configuration, visit http://go.microsoft.com/fwlink/?LinkID=237468 --></configSections>
  
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5" />
@@ -20,11 +20,10 @@
 
     <bindings>
     <basicHttpBinding>
-        <binding name="LargeDataTransferServicesBinding" maxReceivedMessageSize="2147483647"
-  messageEncoding="Text" transferMode="Streamed" sendTimeout="00:10:00" />
+        <binding name="LargeDataTransferServicesBinding" maxReceivedMessageSize="2147483647" messageEncoding="Text" transferMode="Streamed" sendTimeout="00:10:00" />
     </basicHttpBinding>
     <netTcpBinding>
-      <binding name="TransctionalTCP" transactionFlow="true"/>
+      <binding name="TransctionalTCP" transactionFlow="true" />
     </netTcpBinding>
 </bindings>
 
@@ -41,8 +40,7 @@
     </behaviors>
     <services>
       <service name="LocationServices.Locations.LocationService">
-        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="LargeDataTransferServicesBinding"
-          contract="LocationServices.Locations.ILocationService">
+        <endpoint address="" binding="basicHttpBinding" bindingConfiguration="LargeDataTransferServicesBinding" contract="LocationServices.Locations.ILocationService">
           <identity>
             <dns value="localhost" />
           </identity>
@@ -55,8 +53,7 @@
         </host>
       </service>
       <service behaviorConfiguration="CallbackServiceBehavior" name="LocationServices.LocationCallbacks.LocationCallbackService">
-        <endpoint address="" binding="netTcpBinding" bindingConfiguration="TransctionalTCP"
-          contract="LocationServices.LocationCallbacks.ILocationAlarmService" />
+        <endpoint address="" binding="netTcpBinding" bindingConfiguration="TransctionalTCP" contract="LocationServices.LocationCallbacks.ILocationAlarmService" />
         
         <endpoint address="mex" binding="mexTcpBinding" contract="IMetadataExchange" />
       
