--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -96,7 +96,12 @@
     <Compile Include="ServiceHostHelper.cs" />
     <Compile Include="Tools\ConvertHelper.cs" />
     <Compile Include="Tools\DeviceInfoService.cs" />
+    <Compile Include="Tools\LightUDP.cs" />
     <Compile Include="Tools\ObjectAddListService.cs" />
+    <Compile Include="Tools\PositionEngineClient.cs" />
+    <Compile Include="Tools\PositionEngineDA.cs" />
+    <Compile Include="Tools\PositionEngineLog.cs" />
+    <Compile Include="Tools\PositionMocker.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
