--- a/Server/WCFServer/LocationWCF/App.config
+++ b/Server/WCFServer/LocationWCF/App.config
@@ -154,6 +154,14 @@
   
             </dependentAssembly>
   
+            <dependentAssembly>
+  
+                 <assemblyIdentity name="System.Web.Cors" publicKeyToken="31bf3856ad364e35" culture="neutral" />
+  
+                 <bindingRedirect oldVersion="0.0.0.0-5.2.6.0" newVersion="5.2.6.0" />
+  
+            </dependentAssembly>
+  
        </assemblyBinding>
   
   </runtime>
