--- a/Server/WCFServer/LocationWCF/packages.config
+++ b/Server/WCFServer/LocationWCF/packages.config
@@ -3,14 +3,27 @@
   <package id="CollectionJson" version="0.8" targetFramework="net45" />
   <package id="DynamicUtils" version="1.0.1" targetFramework="net45" />
   <package id="EntityFramework" version="6.2.0" targetFramework="net45" />
+  <package id="jQuery" version="1.6.4" targetFramework="net45" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.SelfHost" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.Bcl" version="1.1.10" targetFramework="net45" />
   <package id="Microsoft.Bcl.Build" version="1.0.14" targetFramework="net45" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
+  <package id="Microsoft.Owin" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.HttpListener" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Host.SystemWeb" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Hosting" version="2.1.0" targetFramework="net45" />
+  <package id="Microsoft.Owin.Security" version="2.1.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
+  <package id="Owin" version="1.0" targetFramework="net45" />
   <package id="WebApiContrib.CollectionJson" version="0.1.0" targetFramework="net45" />
   <package id="WebApiContrib.Formatting.CollectionJson.Client" version="0.6.2" targetFramework="net45" />
 </packages>
