添加ChatHub，上传SignalR代码
ChatHub不行，EchoHub可以

--- a/Client/WPFWCFClient/LocationWCF/Location.WCFClient.csproj
+++ b/Client/WPFWCFClient/LocationWCF/Location.WCFClient.csproj
@@ -93,6 +93,9 @@
       <SubType>Designer</SubType>
     </ApplicationDefinition>
     <Compile Include="AppContext.cs" />
+    <Compile Include="Windows\ChatHubWindow.xaml.cs">
+      <DependentUpon>ChatHubWindow.xaml</DependentUpon>
+    </Compile>
     <Compile Include="Windows\ClientWindow.xaml.cs">
       <DependentUpon>ClientWindow.xaml</DependentUpon>
     </Compile>
@@ -106,6 +109,10 @@
     <Compile Include="Windows\EchoHubWindow.xaml.cs">
       <DependentUpon>EchoHubWindow.xaml</DependentUpon>
     </Compile>
+    <Page Include="Windows\ChatHubWindow.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="Windows\ClientWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
@@ -177,13 +184,6 @@
       <Project>{2f461217-f714-4546-9302-d17c3f730ded}</Project>
       <Name>WPFClientControlLib</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Scripts\jquery-1.6.4-vsdoc.js" />
-    <Content Include="Scripts\jquery-1.6.4.js" />
-    <Content Include="Scripts\jquery-1.6.4.min.js" />
-    <Content Include="Scripts\jquery.signalR-2.3.0.js" />
-    <Content Include="Scripts\jquery.signalR-2.3.0.min.js" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
