--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -49,6 +49,7 @@
     <Compile Include="LocationHistory\Work\PersonnelMobileInspectionItemHistory.cs" />
     <Compile Include="LocationHistory\Work\SafetyMeasuresHistory.cs" />
     <Compile Include="LocationHistory\Work\WorkTicketHistory.cs" />
+    <Compile Include="Location\AreaAndDev\Archor.cs" />
     <Compile Include="Location\AreaAndDev\Dev_DoorAccess.cs" />
     <Compile Include="Location\AreaAndDev\ModelTypeItem.cs" />
     <Compile Include="Location\AreaAndDev\ObjectAddList.cs" />
