--- a/Server/WebSite/LocationWeb/packages.config
+++ b/Server/WebSite/LocationWeb/packages.config
@@ -16,15 +16,21 @@
   <package id="Microsoft.ApplicationInsights.Web" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer" version="2.7.2" targetFramework="net45" />
   <package id="Microsoft.ApplicationInsights.WindowsServer.TelemetryChannel" version="2.7.2" targetFramework="net45" />
+  <package id="Microsoft.AspNet.Cors" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Core" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.EntityFramework" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Identity.Owin" version="2.2.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.Razor" version="3.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.Core" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.JS" version="2.3.0" targetFramework="net45" />
+  <package id="Microsoft.AspNet.SignalR.SystemWeb" version="2.3.0" targetFramework="net45" />
   <package id="Microsoft.AspNet.Web.Optimization" version="1.1.3" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Client" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.Core" version="5.2.6" targetFramework="net45" />
+  <package id="Microsoft.AspNet.WebApi.Cors" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.OData" version="5.3.1" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebApi.WebHost" version="5.2.6" targetFramework="net45" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.6" targetFramework="net45" />
@@ -38,6 +44,7 @@
   <package id="Microsoft.Net.Compilers" version="2.9.0" targetFramework="net45" developmentDependency="true" />
   <package id="Microsoft.Net.Http" version="2.2.29" targetFramework="net45" />
   <package id="Microsoft.Owin" version="3.0.1" targetFramework="net45" />
+  <package id="Microsoft.Owin.Cors" version="2.1.0" targetFramework="net45" />
   <package id="Microsoft.Owin.Host.SystemWeb" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security" version="3.0.1" targetFramework="net45" />
   <package id="Microsoft.Owin.Security.Cookies" version="3.0.1" targetFramework="net45" />
