--- a/Server/WCFServer/LocationWCF/Location.Server.csproj
+++ b/Server/WCFServer/LocationWCF/Location.Server.csproj
@@ -256,6 +256,10 @@
       <Project>{78dc1103-e23b-423a-a1b3-f7022934dd1c}</Project>
       <Name>WebApiLib</Name>
     </ProjectReference>
+    <ProjectReference Include="..\..\..\WebApi\WebNSQLib\WebNSQLib.csproj">
+      <Project>{13ccc157-451b-4249-bd65-a4db04a5c143}</Project>
+      <Name>WebNSQLib</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="..\..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets" Condition="Exists('..\..\..\packages\Microsoft.Bcl.Build.1.0.14\tools\Microsoft.Bcl.Build.targets')" />
