--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -50,6 +50,7 @@
     <Reference Include="System.Core" />
     <Reference Include="System.Runtime.Serialization" />
     <Reference Include="System.ServiceModel" />
+    <Reference Include="System.ServiceModel.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -85,9 +86,11 @@
     <Compile Include="Locations\Interfaces\ITagService.cs" />
     <Compile Include="Locations\Interfaces\IPhysicalTopologyService.cs" />
     <Compile Include="Locations\Interfaces\IPositionService.cs" />
+    <Compile Include="Locations\Interfaces\ITestService.cs" />
     <Compile Include="Locations\Interfaces\IUserService.cs" />
     <Compile Include="Locations\Interfaces\IWorkService.cs" />
     <Compile Include="Locations\LocationService.cs" />
+    <Compile Include="Locations\LocationService_Area.cs" />
     <Compile Include="Locations\LocationService_Dev.cs" />
     <Compile Include="Locations\LocationService_BaseData.cs" />
     <Compile Include="Locations\LocationService_Manage.cs" />
