--- a/Service/LocationWCF/Location.Service.csproj
+++ b/Service/LocationWCF/Location.Service.csproj
@@ -96,6 +96,10 @@
     <Compile Include="Locations\LocationService_Manage.cs" />
     <Compile Include="Locations\LocationService_Person.cs" />
     <Compile Include="Locations\LocationService_ConfigArg.cs" />
+    <Compile Include="Locations\Services\AreaService.cs" />
+    <Compile Include="Locations\Services\IAreaService.cs" />
+    <Compile Include="Locations\Services\IEntityService.cs" />
+    <Compile Include="Locations\Services\ITreeEntityService.cs" />
     <Compile Include="Log.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceHostHelper.cs" />
