--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -69,6 +69,7 @@
     <Compile Include="Location\AreaAndDev\Post.cs" />
     <Compile Include="Location\AreaAndDev\Tag.cs" />
     <Compile Include="Location\AreaAndDev\TransformM.cs" />
+    <Compile Include="Location\Data\DoorAccessState.cs" />
     <Compile Include="Location\Data\TagPosition.cs" />
     <Compile Include="Location\Manage\LoginInfo.cs" />
     <Compile Include="Location\Obsolete\User.cs" />
