--- a/Service/SignalRService/SignalRService.csproj
+++ b/Service/SignalRService/SignalRService.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="Hubs\AlarmHub.cs" />
     <Compile Include="Hubs\ChatHub.cs" />
+    <Compile Include="Hubs\DoorAccessHub.cs" />
     <Compile Include="Hubs\EchoHub.cs" />
     <Compile Include="Tools\UserManager.cs" />
     <Compile Include="Models\UserData.cs" />
