--- a/Model/TModel/TModel.csproj
+++ b/Model/TModel/TModel.csproj
@@ -72,6 +72,9 @@
     <Compile Include="Location\Data\DoorAccessState.cs" />
     <Compile Include="Location\Data\TagPosition.cs" />
     <Compile Include="Location\Manage\LoginInfo.cs" />
+    <Compile Include="Location\Nodes\AreaNode.cs" />
+    <Compile Include="Location\Nodes\DevNode.cs" />
+    <Compile Include="Location\Nodes\PersonNode.cs" />
     <Compile Include="Location\Obsolete\User.cs" />
     <Compile Include="Location\Obsolete\Map.cs" />
     <Compile Include="Location\Person\Department.cs" />
@@ -91,6 +94,7 @@
     <Compile Include="Location\Work\WorkTicket.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Tools\ConvertHelper.cs" />
+    <Compile Include="Tools\DevTypeHelper.cs" />
     <Compile Include="Tools\ExtensionBase.cs" />
     <Compile Include="Tools\TimeConvert.cs" />
   </ItemGroup>
